[project]
name = "test-time-adaptation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "iopath>=0.1.10",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "webdataset>=1.0.2",
    "yacs>=0.1.8",
]
